--- a/doc.html
+++ b/doc.html
@@ -566,7 +566,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <p><a href="#" data-i18n="footer.author">By DealeGear</a></p>
+        <p><a href="https://www.dealegear.com.br/index.html" data-i18n="footer.author">By DealeGear</a></p>
     </footer>
 
     <script>
