--- a/index.html
+++ b/index.html
@@ -547,8 +547,8 @@
           </div>
 
           <div class="cta-buttons">
-            <a href="../../docs/index.html" class="btn-secondary" data-translate="documentacao">Documentação</a>
-            <a href="../../index.html" class="btn-secondary">GearLabs</a>
+            <a href="doc.html" class="btn-secondary" data-translate="documentacao">Documentação</a>
+            <a href="https://www.dealegear.com.br/gearlabs/index.html" class="btn-secondary">GearLabs</a>
           </div>
         </ul>
 
@@ -907,7 +907,7 @@
           <!--<a href="../../docs/index.html" data-translate="footer-doc">Documentação</a>
           <span class="separator">|</span>
           <a href="../../index.html" data-translate="footer-privacy">GearLabs</a>-->
-          <p><a href="../../../index.html" class="link-footer">By DealeGear</a></p>
+          <p><a href="https://www.dealegear.com.br/index.html" class="link-footer">By DealeGear</a></p>
           
           
         </div>
