Atualização geral GTO

--- a/doc.html
+++ b/doc.html
@@ -101,7 +101,7 @@
             box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3);
         }
 
-        .github-link {
+        .landpage-link {
             display: inline-block;
             width: 100%;
             padding: 0.75rem;
@@ -115,7 +115,7 @@
             margin-bottom: 1rem;
         }
 
-        .github-link:hover {
+        .landpage-link:hover {
             background: var(--border-color);
         }
 
@@ -393,8 +393,8 @@
     <aside class="sidebar" id="sidebar">
         <!-- Botão GearLabs -->
         <div class="sidebar-section">
-            <a href="https://www.dealegear.com.br/gearlabs/index.html" class="gearlabs-btn">GearLabs</a>
-            <a href="https://github.com/gearlabs-dealegear/3gto" class="github-link" data-i18n="sidebar.github">Ver no GitHub</a>
+            <a href="https://gearlabs-dealegear.github.io/3gto/" class="gearlabs-btn">GearLabs</a>
+            <a href="index.html" class="landpage-link" data-i18n="sidebar.landpage">Landpage</a>
         </div>
 
         <!-- Seletor de Idiomas -->
@@ -574,7 +574,7 @@
         const translations = {
             pt: {
                 'header.title': '3GTO — Documentação Técnica',
-                'sidebar.github': 'Ver no GitHub',
+                'sidebar.landpage': 'Landpage',
                 'sidebar.language': 'Idioma',
                 'sidebar.navigation': 'Navegação',
                 'nav.overview': 'Visão Geral',
@@ -642,7 +642,7 @@
             },
             en: {
                 'header.title': '3GTO — Technical Documentation',
-                'sidebar.github': 'View on GitHub',
+                'sidebar.landpage': 'Landpage',
                 'sidebar.language': 'Language',
                 'sidebar.navigation': 'Navigation',
                 'nav.overview': 'Overview',
@@ -710,7 +710,7 @@
             },
             es: {
                 'header.title': '3GTO — Documentación Técnica',
-                'sidebar.github': 'Ver en GitHub',
+                'sidebar.landpage': 'Landpage',
                 'sidebar.language': 'Idioma',
                 'sidebar.navigation': 'Navegación',
                 'nav.overview': 'Visión General',
