--- a/doc.html
+++ b/doc.html
@@ -393,8 +393,8 @@
     <aside class="sidebar" id="sidebar">
         <!-- Botão GearLabs -->
         <div class="sidebar-section">
-            <a href="https://gearlabs-dealegear.github.io/3gto/" class="gearlabs-btn">GearLabs</a>
-            <a href="index.html" class="landpage-link" data-i18n="sidebar.landpage">Landpage</a>
+            <a href="https://www.dealegear.com.br/gearlabs/index.html" class="gearlabs-btn">GearLabs</a>
+            <a href="https://gearlabs-dealegear.github.io/3gto/" class="landpage-link" data-i18n="sidebar.landpage">Landpage</a>
         </div>
 
         <!-- Seletor de Idiomas -->
